using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class texts
{
    //Scenes
    public const string SCENE_1 = "Scene1";
    public const string VERTICAL = "Vertical";
    public const string HORIZONTAL = "Horizontal";

    //Buttons
    public const string FIRE_1 = "Fire1";
    public const string FIRE_2 = "Fire2";
    //Animations
    public const string ANIM_ATACK = "Atack";
    public const string ANIM_SHOOT = "Shoot";
    public const string ANIM_TAKEDAMAGE = "TakeDamage";
}


